Update for Monday

--- a/_content/timeline/2022-12-19.mdx
+++ b/_content/timeline/2022-12-19.mdx
@@ -2,8 +2,9 @@ export const meta = {
     date: "2022-12-17"
 };
 
-Since it's the last meeting of the year, we're having a pizza party! Here's what we're going to be doing today:
+Since it's the last meeting of the year, we're having a pizza party! Here's what we're going to be doing today. I've decided to try out slotting everything into times:
 
--   Eating pizza!
--   Getting everyone on the same track. Pretty soon I'm going to forget what everybody is doing, so I'm going to get everyone set up with [this]() walkthrough so that everyone is signed up on Slack, knows what Hack Club is, etc.
--   Let's build a New Year's card together! Everyone's going to get a different part, and we're going to deploy it by the end of the meeting.
+-   2:15 - 2:30: Everybody's going to be doing a different thing. I'll be helping people out with the Sprig workshop if they haven't finished it yet. Other people will be getting started with [this walkthrough](/walkthroughs/newcomers.mdx) (eventually everyone will get this done), and then working on a holiday card!
+-   3:00 - 3:15: Everyone's going to demo what they've done in Hack Club so far (if they want to)! If you've created a website, show it off! If you're working on a Sprig game, tell the rest of the club what your game's about!
+
+I don't think we'll finish the holiday card during the meeting, but I will have it deployed by the end of Monday! Then, you guys can share it with whoever you want to share it with.
