--- a/_content/walkthroughs/newcomers.mdx
+++ b/_content/walkthroughs/newcomers.mdx
@@ -3,40 +3,136 @@ date: 2022-12-18
 title: Getting started!
 ---
 
-The email that we are replying to:
+New to Hack Club? Here's an intro workshop on joining Hack Club.
 
-![](https://cloud-lrmf4rox8-hack-club-bot.vercel.app/0email.png)
+The first question, of course, is: **What is Hack Club**? According to Hack Club, it's made up of "23,294 teen hackers from around the world who code together"... including you!
 
-In response to your email on Hack Club, I would like to restate my points that this is an organization that would greatly benefit South Forsyth High School and its student body by giving them monumental opportunities.
+When we talk about hacking, we don't mean actual hacking. Actually, hacking is a very broad term. When we hack, we build something cool, using only resources from the Internet, help from other hackers, and of course, cool tech like 3D printers, etc.
 
-You’ve stated that Hack Club already closely resembles current clubs that exist, so I’ve taken the time to talk to the presidents of the four SFHS computer science clubs to better understand their goals and focuses. [Here is the full list that I’ve compiled.](https://docs.google.com/document/d/1mEpZhJC0IvTIRTAG5ev9c2m7nUe3zrDvtoDEWm7zES0/edit)
+Hack Club allows you to interact with other hackers. You can:
 
-Here’s a quick summary:
+1. Connect with other teenage coders
+2. Build open source (open to the public for everyone to contribute to) learning tools
+3. Gather IRL with other makers
 
--   **Coding Club** is a learning-based club that “meet[s] online and we either have a slideshow that we got through and then learn coding concepts. And then after we learn how to code on those certain coding concepts, we come together and apply it in a Kahoot or fun activity. And after students are done learning we switch to a different language” (Joseph Vattakkunnel - Co-President of Coding Club)
--   **CyberPatriot** is a competition and learning-based club that orients itself around cybersecurity and the national CyberPatriot competition. “CyberPatriot members need to know everything there is to know about the operating systems they use, whether it be Windows 10, Windows Server, or Ubuntu Linux. We also do a lot of computer networking and cryptography, so these are very useful skills to pick up. Members become experts of Windows and/or Ubuntu operating systems and learn a lot about computer networking and network security” (Rasmit Devkota - Co-President of CyberPatriot)
--   “**ACSL** is a club focused on the competitive aspects of Computer Science. ACSL itself has contests that test many different subjects within CS that ACSL members will learn, such as Recursion, boolean algebra, and digital electronics. The challenge problems and competitive programming are also covered within ACSL. Although the coding skills that one uses for it may not generalize to general software development/programming, it can help with algorithmic thinking and it is very similar to LeetCode style problems, which is useful in the real world” (Aidan Wang - President of ACSL)
--   **“GirlsWhoCode** is a club that seeks to inspire high school girls to explore the field of coding and get involved in multiple opportunities to improve their coding skills. Our main goals include engaging girls in fun coding activities so that they have the motivation to
+Basically, lots of cool stuff! I'd also like to point out #3. Hack Club has done all sorts of cool events from [Assemble](https://assemble.hackclub.com) to [Epoch](https://epoch.hackclub.com) to [Winter Wonderland](https://hackclub.com/winter/). Explore the site when you can, there's so much to do!
 
-do it in their own time and enhance their coding skills to the point where they can get involved in hackathons and achieve awards” (Alexis Foster - President of GirlsWhoCode)
+## Let's get you started!
 
-As you can see, all these clubs have unique main focuses. For example, the coding club is learning-based while ACSL and Cyberpatriot revolve around their unique and skill-tailored national competitions that occur throughout the year.
+Okay, now let's actually get you set up with Hack Club. The first thing you'll want to do is sign up for [Hack Club Slack](https://hackclub.com/slack/?continent=North%20America), where you can talk to other teenage hackers.
 
-Now here’s a list of Hack Club’s goals and opportunities:
+Once you've signed up and gone through the onboarding process, you should have access to a bunch of channels (think of channels as discussion channels where you can discuss different topics), including `#welcome`. Here, introduce yourself to Hack Club! It can be anything from a simple, "Hi, I'm" to "Here's what I do".
 
--   Our main goal would be to create a [project-based club](https://workshops.hackclub.com/) that has access to the hundreds of opportunities that the global organization Hack Club provides
--   Host and compete in sponsored hackathons with a $500 [Hack Club grant](https://hackclub.com/hackathons/grant/)
--   Allow individuals to come together and create with coding, learning from each other and hack clubbers around the world
--   Involve members in STEM and Technology internships that can help them stand out
+Now, we're going to sign up for [Hack Club's scrapbook](https://scrapbook.hackclub.com/about). It's what it sounds like - a scrapbook where you can post updates about what you're working on, in this club and in your free time! Take a picture of your introduction in `#welcome` (let me know if you have trouble with this), and then head over to the `#scrapbook` channel, and post something like: "I'm new to Hack Club!" followed by the screenshot of your introduction.
 
-To re-emphasize, we are not merely starting a club at South Forsyth High School, but a chapter that is part of a global organization with a network of [talented students](https://hackclub.com/ship/) all over the world. Members of a Hack Club have opportunities to talk in [AMAs](https://hackclub.com/amas/) that have included virtual conversations with [Elon Musk](https://hackclub.com/relon/), Niki Case, Dylan Field, and something that I am a part of in the near future, Sal Khan. They have extraordinary [hackathons](https://www.youtube.com/watch?v=PnK4gzO6S3Q) that involve communities coming together to spend a number of hours with like-minded individuals to create coding projects and grow.
+Once you've got this, a bot called Scrappy should respond, giving you a link to check out your scrapbook. Here's how mine looks like:
 
-Our school currently does not have a space where we can bridge the gap between coding knowledge and the application of those principles to create programs that can be used in the real world. This can include [creating a game on a physical gaming console](https://sprig.hackclub.com/) that can be shipped out _free of cost_, an educational and [interactive web-app math game](https://github.com/hackclub/sinerider) that can help calculus students, or even [workshops ](https://workshops.hackclub.com/)that can be remixed into newer ideas. These examples are all programs created by teenagers in Hack Clubs.
+![Scrapbook](/images/newcomers/scrapbook.png)
 
-As a leader for Hack Club, it would be life-changing to extend these opportunities to the SFHS student body. I understand that our school is very STEM club dense; however, we have a school of brilliant individuals but not a single open platform where everyone regardless of expertise, gender, or affiliation can create projects together. Although it is possible to have a Hack Club that isn’t affiliated with the school, this would prohibit students who cannot drive or don’t have any kind of transportation to attend meetings.
+To change your scrapbook ID, run `/scrappy-setusername <New ID>` inside Slack, probably in a message to yourself.
 
-The only thing in between where we stand now and officially affiliating the club is the administration’s approval for our club.
+Now let's sign up for [Replit](https://replit.com), a tool that lets you code online. Simply head to the website and sign up with your Google account (can be your school or personal). We will use this all the time since we can't really download anything on these computers.
 
-We are open to any way this organization can be implemented into SFHS and hope this email has given a better understanding of how our goals differentiate from those of other Computer Science clubs.
+Last but not least, we need to sign up for [GitHub](https://github.com). Out of the things you'll sign up for today, GitHub probably makes the least sense. But it's a place where we can collaborate on code. The more you use it, the more it will make sense. To sign up, simply head to the website, click on sign up, and fill out the necessary info. (Let me know if you have any trouble with this.)
 
-I am always ready to talk in person, and I have also copied Hack Club on this email. If you are willing, Holly, Hack Club’s Operations Lead, is open to having a conversation to better help you understand what Hack Club can bring to our school.
+## Adding yourself to the list of members
+
+Now that you've signed up for GitHub, we're going to see how it allows us to collaborate on code. Head over to [https://github.com/cchshackclub/more](https://github.com/cchshackclub/more). This is a **repository**, a code project; specifically, the code in this repository powers this website. Click on the "Fork" button in the top right corner (it's next to the "Start" and "Watch" buttons). This basically allows you to create your version of the code.
+
+It should redirect you to a page that looks like this:
+
+![GitHub pull request](/images/newcomers/pull-request.png)
+
+Click "Create fork", and now you should have your own repository, `<your GitHub handle>/more`. You can directly edit this one!
+
+If you explore the files in the repo, you'll see that there's a file called `members.json`. JSON stands for JavaScript Object Notation and is a way to represent data. The contents of the file will look something like this:
+
+```json
+[
+    {
+        "name": "Jianmin Chen",
+        "pronouns": "she/her",
+        "github": "jianmin-chen",
+        "slack": "U03MNFDRSGJ",
+        "slackhandle": "jc",
+        "scrapbook": "jc",
+        "website": "https://jianminchen.com",
+        "about": "Most people have trouble calling me by my actual name, so just call me Amanda! I discovered programming by accident when I found a book at my local library (in Brooklyn). I discovered Hack Club this spring (2022)."
+    }
+]
+```
+
+The brackets, `[]`, means that this is a list of data. Each item in the list looks something like this:
+
+```json
+{
+    "name": "Jianmin Chen",
+    "pronouns": "she/her",
+    "github": "jianmin-chen",
+    "slack": "U03MNFDRSGJ",
+    "slackhandle": "jc",
+    "scrapbook": "jc",
+    "website": "https://jianminchen.com",
+    "about": "Most people have trouble calling me by my actual name, so just call me Amanda! I discovered programming by accident when I found a book at my local library (in Brooklyn). I discovered Hack Club this spring (2022)."
+}
+```
+
+The items are all _separated by commas_. So, to add your info, you'd add this to the bottom of the data:
+
+```json
+[
+    {
+        "name": "Jianmin Chen",
+        "pronouns": "she/her",
+        "github": "jianmin-chen",
+        "slack": "U03MNFDRSGJ",
+        "slackhandle": "jc",
+        "scrapbook": "jc",
+        "website": "https://jianminchen.com",
+        "about": "Most people have trouble calling me by my actual name, so just call me Amanda! I discovered programming by accident when I found a book at my local library (in Brooklyn). I discovered Hack Club this spring (2022)."
+    },
+    {
+        "name": "Your name",
+        "pronouns": "Your pronouns",
+        "github": "Your GitHub handle",
+        "slack": "Your Slack ID",
+        "slackhandle": "Your Slack handle",
+        "scrapbook": "Your scrapbook ID",
+        "website": "Link to your (Replit) website",
+        "about": "About you!"
+    }
+]
+```
+
+<details>
+    <summary>Where do I get this information?</summary>
+    * `github`: Your username for GitHub! to change your member picture, change your GitHub avatar.
+    * `slack`: Your Slack ID. To find this, go to Hack Club Slack, open up your profile (click your profile image in the top right corner > Profile), and then click on the hamburger menu > Copy member ID.
+    * `slackhandle`: This is your display name on Slack.
+    * `scrapbook`: This is your scrapbook ID, which you should have changed before.
+    * `website`: If you already created a website with Replit, this is the link to that website. Otherwise, **you don't have to add this line**.
+</details>
+
+Now let's actually add the data. If you're viewing the file, simply click the little pencil icon above the code, which will take you to a page like this:
+
+![GitHub edit](/images/newcomers/github-edit.png)
+
+Add your info, and then scroll down to where it says "Commit changes". To commit a change means to, well, make a change. "Commit" is just nice terminology. Anyways, in the small text box (where it should say `Create members.json`), add a description of what you just did. It can be something along the lines of "Add myself to list of members".
+
+Once you've done this, press the green "Commit changes", and the file will be updated!
+
+Of course, this is **your** repo. If you check the [member website](/members), nothing will change. To change it, you need to make a **pull request**. A pull request allows you to ask the owner of some code, "Can I make a change?"
+
+So let's do that. Go back to the main page of your repository. You'll see text that's similar to "This branch is... with cchshackclub/more". We're going to click on the "Contribute" button, and then "Open pull request".
+
+You'll be redirected to a page that looks like this:
+
+![Open pull request](/images/newcomers/open-pull-request.png)
+
+If it says "Able to merge", click on "Create pull request"! (If it doesn't, let me know.)
+
+Of course, just because you open a pull request doesn't mean it actually updates the code of the original repository. After all, it's a _request_, since you don't own/have access to the repo. Once I approve it and **merge** the changes you've made to the original repository, your member info will show up on the website! How cool is that? Make sure to let me know that you've opened a pull request so I can then merge it.
+
+## Done early?
+
+Let me know! I'll either have you work on what we're currently doing or get you to build your first website with [this workshop](https://workshops.hackclub.com/personal_website/).
